things and stuff

--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,13 @@ name = "pypi"
 
 [packages]
 
+csv = "*"
 numpy = "*"
 sklearn = "*"
 scipy = "*"
-
+seaborn = "*"
+matplotlib = "*"
+statsmodels = "*"
 
 [requires]
 
